# ai

./: CMakeLists.txt  Matrix.cpp  Matrix.h  Perceptron.cpp  Perceptron.h  TrainingItem.cpp  TrainingItem.h  evolution_main.cpp  evolution_main.h  main.cpp  mlp.cc  mlp.h  neural_net.cpp  neural_net.h  tools.cpp  tools.h
